[gd_scene load_steps=7 format=3 uid="uid://dp6h2dbl4d8yc"]

[ext_resource type="FontFile" uid="uid://dbjl1e6kdxpl6" path="res://assets/fonts/PixelOperator8.ttf" id="1_5jlxj"]
[ext_resource type="Script" path="res://UI/RecipesUI/Recipe_Slot.gd" id="1_6207k"]
[ext_resource type="Texture2D" uid="uid://kojggh7vqbwh" path="res://assets/sprites/ui/bg-panel.png" id="2_xni02"]
[ext_resource type="Texture2D" uid="uid://c7rjhpcrj71v0" path="res://assets/sprites/objects/goods/swordIron.png" id="3_r10c3"]
[ext_resource type="Texture2D" uid="uid://cv1001fb7jsrh" path="res://assets/sprites/ui/lock.png" id="4_cs60e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t7vc2"]

[node name="RecipeSlot" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1070.0
offset_bottom = -2432.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6207k")

[node name="OuterBorder" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xni02")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="ItemQty" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("1_5jlxj")
theme_override_font_sizes/font_size = 16
text = "1"

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 23.0
offset_right = 34.0
offset_bottom = 39.0
scale = Vector2(4, 4)
texture = ExtResource("3_r10c3")
expand_mode = 2

[node name="LockIcon" type="Sprite2D" parent="."]
visible = false
position = Vector2(49, 49)
scale = Vector2(2, 2)
texture = ExtResource("4_cs60e")

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_t7vc2")

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
